:bug: 피드 및 추천 사진 수정